--- a/public/brainstrom.html
+++ b/public/brainstrom.html
@@ -1,40 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Get Inspiration</title>
-    <link rel="stylesheet" href="/style.css" />
-  </head>
-  <body>
-    <div class="container">
-      <h1>Get Artistic Inspiration</h1>
-      <form id="inspirationForm">
-        <input type="text" id="topic" placeholder="Enter art topic" required />
-        <input type="text" id="style" placeholder="Enter art style" required />
-        <input type="text" id="media" placeholder="Enter media type" required />
-        <button type="submit">Generate Inspiration</button>
-      </form>
-      <div id="inspiration"></div>
-    </div>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Brainstorm Lab</title>
+  <link rel="stylesheet" href="style4.css">
+</head>
+<body>
+  <div class="container">
+    <h1>Brainstorm Lab</h1>
+    <form id="brainstormForm">
+      <label for="words">Enter words (separate by commas):</label>
+      <input type="text" id="words" name="words" placeholder="e.g., sustainability, nature, future" required />
 
-    <script>
-      document.getElementById("inspirationForm").addEventListener("submit", async (e) => {
-        e.preventDefault();
-        const topic = document.getElementById("topic").value;
-        const style = document.getElementById("style").value;
-        const media = document.getElementById("media").value;
+      <label for="mediaType">Choose or enter a media type:</label>
+      <select id="mediaTypeSelect" name="mediaTypeSelect">
+        <option value="Graphic Design">Graphic Design</option>
+        <option value="Animation">Animation</option>
+        <option value="Product Design">Product Design</option>
+        <option value="UI/UX">UI/UX</option>
+        <option value="Illustration">Illustration</option>
+        <option value="Interactive Media">Interactive Media</option>
+        <option value="Other">Other (Enter below)</option>
+      </select>
 
-        if (!topic || !style || !media) {
-          alert("Please fill out all fields!");
-          return;
-        }
+      <div id="mediaTypeInputWrapper" style="display: none;">
+        <label for="mediaTypeInput">Enter Custom Media Type:</label>
+        <input type="text" id="mediaTypeInput" name="mediaTypeInput" placeholder="e.g., Augmented Reality" />
+      </div>
 
-        const response = await fetch(`/api/inspiration?topic=${encodeURIComponent(topic)}&style=${encodeURIComponent(style)}&media=${encodeURIComponent(media)}`);
-        const data = await response.json();
+      <button type="submit">Generate Ideas</button>
+    </form>
 
-        document.getElementById("inspiration").innerText = `Inspiration: ${data.inspiration}`;
-      });
-    </script>
-  </body>
+    <div id="ideas" style="margin-top: 20px;"></div>
+  </div>
+
+  <script>
+    // Show or hide the input field for custom media type
+    document.getElementById('mediaTypeSelect').addEventListener('change', function() {
+      const mediaTypeSelect = document.getElementById('mediaTypeSelect');
+      const mediaTypeInputWrapper = document.getElementById('mediaTypeInputWrapper');
+      const mediaTypeInput = document.getElementById('mediaTypeInput');
+
+      if (mediaTypeSelect.value === 'Other') {
+        mediaTypeInputWrapper.style.display = 'block'; // Show the custom input field
+        mediaTypeInput.required = true; // Make it a required field when "Other" is selected
+      } else {
+        mediaTypeInputWrapper.style.display = 'none'; // Hide the custom input field
+        mediaTypeInput.required = false; // Make it optional if not "Other"
+      }
+    });
+
+    document.getElementById('brainstormForm').addEventListener('submit', async (event) => {
+      event.preventDefault();
+
+      const words = document.getElementById('words').value.split(',').map(word => word.trim());
+      let mediaType = document.getElementById('mediaTypeSelect').value;
+
+      // If the user entered a custom media type, use that instead
+      if (mediaType === 'Other') {
+        mediaType = document.getElementById('mediaTypeInput').value;
+      }
+
+      const ideasDiv = document.getElementById('ideas');
+      ideasDiv.textContent = "Generating ideas...";
+
+      try {
+        const formData = { words, mediaType };
+
+        const response = await fetch('/api/brainstorm', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify(formData),
+        });
+
+        const result = await response.json();
+        ideasDiv.innerHTML = `<h3>Generated Ideas:</h3><ul>
+          ${result.ideas.map(idea => `<li>${idea}</li>`).join('')}
+        </ul>`;
+      } catch (error) {
+        ideasDiv.textContent = "Error generating ideas. Please try again.";
+        console.error("Error:", error);
+      }
+    });
+  </script>
+</body>
 </html>
