--- a/public/index.html
+++ b/public/index.html
@@ -3,22 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Welcome to ArtistryHub!</title>
+    <title>Welcome to InnoVibe!</title>
     <link rel="stylesheet" href="styles.css">
-
   </head>
   <body>
-    <div class="container" style="position: relative; z-index: 100;">
-      <h1>Welcome to ArtistryHub!</h1>
-      <ul>
-          <li><a href="inspiration.html">Inspiration Generator</a><div class="description">Get creative ideas for your design project.</div></li>
-          <li><a href="research.html">Research Assistant</a><div class="description">Access relevant research and insights for your design.</div></li>
-          <li><a href="iteration.html">Creative Critique</a><div class="description">Receive feedback to improve your design.</div></li>
-          <li><a href="brainstrom.html">Brainstorm Lab</a><div class="description">Explore creative ideas and directions.</div></li>   
-          <li><a href="productdesign.html">Concept Crafter</a><div class="description">Create a product design draft based on your goals.</div></li>     
-      </ul>
-    </div>
-    <script src="main.js"></script>
+    <div class="container">
+      <h1>Welcome to InnoVibe!</h1>
+      <p class="description">InnoVibe helps you spark creativity and brings innovative project ideas based on your input. Explore unique directions with Idea Spark.</p>
 
+      <div class="card">
+        <h2>Idea Spark</h2>
+        <p>Enter your keywords, tools, and project use, and we will generate three completely different project directions to get you started!</p>
+        <a href="inspiration.html" class="cta-button">Get Started</a>
+      </div>
+    </div>
+
+    <script src="main.js"></script>
   </body>
-  </html>
+</html>
