--- a/public/inspiration.html
+++ b/public/inspiration.html
@@ -11,13 +11,13 @@
         <h1>Idea Spark</h1>
         <form id="projectForm">
             <label for="keyWords">Enter Keywords (comma separated):</label>
-            <input type="text" id="keyWords" name="keyWords" placeholder="e.g., subway, dreamlike, interesting, sky" required />
+            <input type="text" id="keyWords" name="keyWords" placeholder="eg.subway, dreamlike, interesting, sky" required />
 
             <label for="tools">Choose Tools (comma separated):</label>
-            <input type="text" id="tools" name="tools" placeholder="e.g., Unity, Graphic Design, Unreal Engine" required />
+            <input type="text" id="tools" name="tools" placeholder="eg.Unity, Touch Designer, Unreal Engine" required />
 
             <label for="projectUse">Project Use:</label>
-            <input type="text" id="projectUse" name="projectUse" placeholder="e.g., playful, entertaining, educational" required />
+            <input type="text" id="projectUse" name="projectUse" placeholder="eg.playful, entertaining, educational" required />
 
             <button type="submit">Generate Project Directions</button>
         </form>
