--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,172 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome to InnoVibe!</title>
-    <link rel="stylesheet" href="styles.css">
-  </head>
-  <body>
-    <div class="container">
-      <h1>Welcome to InnoVibe!</h1>
-      <p class="description">InnoVibe helps you spark creativity and brings innovative project ideas based on your input. Explore unique directions with Idea Spark.</p>
+    <link rel="stylesheet" href="styles.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+</head>
+<body>
+    <!-- 3D Particle Animation Canvas -->
+    <canvas id="particleCanvas"></canvas>
 
-      <div class="card">
-        <h2>Idea Spark</h2>
-        <p>Enter your keywords, tools, and project use, and we will generate three completely different project directions to get you started!</p>
-        <a href="inspiration.html" class="cta-button">Get Started</a>
-      </div>
+    <!-- Main Content -->
+    <div class="container">
+        <h1>Welcome to InnoVibe!</h1>
+        <p class="description">
+            InnoVibe is your creative companion! Whether you're working on a
+            design, a project, or just need some inspiration, we're here to guide
+            you with creative sparks and ideas based on your input.
+        </p>
+        
+        <div class="card">
+            <h2>Idea Spark</h2>
+            <p>
+                Get unique project directions and inspiration with just a few clicks!
+                Enter keywords, tools, and project purpose, and let our assistant help
+                you kickstart your next creative journey.
+            </p>
+            <a href="inspiration.html" class="cta-button">Generate Project Directions</a>
+        </div>
     </div>
 
-    <script src="main.js"></script>
-  </body>
+    <script>
+        $(function(){
+            var canvas = document.getElementById('particleCanvas');
+            var ctx = canvas.getContext('2d');
+            canvas.width = window.innerWidth;
+            canvas.height = window.innerHeight;
+            ctx.lineWidth = 0.3;
+            ctx.strokeStyle = (new Color(150)).style;
+
+            var mousePosition = { x: 30 * canvas.width / 100, y: 30 * canvas.height / 100 };
+            var dots = { nb: 150, distance: 50, d_radius: 100, array: [] };
+
+            function colorValue(min) {
+                return Math.floor(Math.random() * 255 + min);
+            }
+
+            function createColorStyle(r,g,b) {
+                return 'rgba(' + r + ',' + g + ',' + b + ', 0.8)';
+            }
+
+            function mixComponents(comp1, weight1, comp2, weight2) {
+                return (comp1 * weight1 + comp2 * weight2) / (weight1 + weight2);
+            }
+
+            function averageColorStyles(dot1, dot2) {
+                var color1 = dot1.color,
+                    color2 = dot2.color;
+
+                var r = mixComponents(color1.r, dot1.radius, color2.r, dot2.radius),
+                    g = mixComponents(color1.g, dot1.radius, color2.g, dot2.radius),
+                    b = mixComponents(color1.b, dot1.radius, color2.b, dot2.radius);
+                return createColorStyle(Math.floor(r), Math.floor(g), Math.floor(b));
+            }
+
+            function Color(min) {
+                min = min || 0;
+                this.r = colorValue(min);
+                this.g = colorValue(min);
+                this.b = colorValue(min);
+                this.style = createColorStyle(this.r, this.g, this.b);
+            }
+
+            function Dot(){
+                this.x = Math.random() * canvas.width;
+                this.y = Math.random() * canvas.height;
+                this.vx = -.5 + Math.random();
+                this.vy = -.5 + Math.random();
+                this.radius = Math.random() * 2;
+                this.color = new Color();
+            }
+
+            Dot.prototype = {
+                draw: function(){
+                    ctx.beginPath();
+                    ctx.fillStyle = this.color.style;
+                    ctx.arc(this.x, this.y, this.radius, 0, Math.PI * 2, false);
+                    ctx.fill();
+                }
+            };
+
+            function createDots(){
+                for (var i = 0; i < dots.nb; i++){
+                    dots.array.push(new Dot());
+                }
+            }
+
+            function moveDots() {
+                for (var i = 0; i < dots.nb; i++){
+                    var dot = dots.array[i];
+
+                    if (dot.y < 0 || dot.y > canvas.height){
+                        dot.vx = dot.vx;
+                        dot.vy = - dot.vy;
+                    }
+                    else if (dot.x < 0 || dot.x > canvas.width){
+                        dot.vx = - dot.vx;
+                        dot.vy = dot.vy;
+                    }
+                    dot.x += dot.vx;
+                    dot.y += dot.vy;
+                }
+            }
+
+            function connectDots() {
+                for (var i = 0; i < dots.nb; i++) {
+                    for (var j = 0; j < dots.nb; j++) {
+                        i_dot = dots.array[i];
+                        j_dot = dots.array[j];
+
+                        if ((i_dot.x - j_dot.x) < dots.distance && (i_dot.y - j_dot.y) < dots.distance && 
+                            (i_dot.x - j_dot.x) > - dots.distance && (i_dot.y - j_dot.y) > - dots.distance) {
+                            
+                            if ((i_dot.x - mousePosition.x) < dots.d_radius && (i_dot.y - mousePosition.y) < dots.d_radius && 
+                                (i_dot.x - mousePosition.x) > - dots.d_radius && (i_dot.y - mousePosition.y) > - dots.d_radius) {
+                                ctx.beginPath();
+                                ctx.strokeStyle = averageColorStyles(i_dot, j_dot);
+                                ctx.moveTo(i_dot.x, i_dot.y);
+                                ctx.lineTo(j_dot.x, j_dot.y);
+                                ctx.stroke();
+                                ctx.closePath();
+                            }
+                        }
+                    }
+                }
+            }
+
+            function drawDots() {
+                for (var i = 0; i < dots.nb; i++){
+                    var dot = dots.array[i];
+                    dot.draw();
+                }
+            }
+
+            function animateDots() {
+                ctx.clearRect(0, 0, canvas.width, canvas.height);
+                moveDots();
+                connectDots();
+                drawDots();
+
+                requestAnimationFrame(animateDots);
+            }
+
+            $('canvas').on('mousemove', function(e){
+                mousePosition.x = e.pageX;
+                mousePosition.y = e.pageY;
+            });
+
+            $('canvas').on('mouseleave', function(e){
+                mousePosition.x = canvas.width / 2;
+                mousePosition.y = canvas.height / 2;
+            });
+
+            createDots();
+            requestAnimationFrame(animateDots);
+        });
+    </script>
+
+</body>
 </html>
